change query into Ethiopia Tigray

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ Triggered by a thought-provoking [thread](https://twitter.com/mekdes_asefa/statu
 
 ## Goal of this repo
 
-* Produce a list of CNN's stories ever since the conflict broke out, November 4, 2020. 
+* Extract stories--pertaining to the conflict--that CNN published ever since the conflict broke out, November 4, 2020. 
 
 ## So far
 
